--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Mohamed Abd Al-Karim Riad Othman">
-    <meta name="copyright" content="KemosDev">
-    <meta name="description" content="">
+    <meta name="copyright" content="amalyat">
+    <meta name="description" content="منصة عمليات هي منصة تهدف إلى أن تكون حلقة وصل قوية في مجتمع الحراسات الأمنية و تنظيم الحشود بحيث يستفيد منها كل من يتعامل في هذين المجالين ">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/phone.css" media="(max-width: 480px)">
