--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Mohamed Abd Al-Karim Riad Othman">
-    <meta name="copyright" content="KemosDev">
+    <meta name="copyright" content="amalyat">
     <meta name="description" content="صفحة التسجيل في منصة عمليات">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="./css/style.css">
